--- a/alpine.yaml
+++ b/alpine.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
   - name: alpine
-    image: alpine
+    image: kongkiatchanu/serverlab:firsttrye
     stdin: true
     tty: true
